added cactus placeholder, soil, pot markup

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 	<title>Cactus</title>
 </head>
 <body>
+	
+<div class="cactus-pot">
+	<div class="cactus">
+	</div>
+
+	<div class="soil"></div>
+
+	<div class="pot">
+		<div class="pot__rim"></div>
+		<div class="pot__bowl"></div>
+		<div class="pot__plate"></div>
+	</div>
+</div>
 
 </body>
 </html>
