specified cactus components in markup

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 	
 <div class="cactus-pot">
 	<div class="cactus">
+		<div class="cactus__trunk">
+			<div class="cactus__trunk-section--crown">
+				<div class="cactus__arm" data-side="right" data-placement="bottom" data-size="small"></div>
+			</div>
+
+			<div class="cactus__trunk-section"></div>
+
+			<div class="cactus__trunk-section">
+				<div class="cactus__arm" data-side="left" data-placement="center" data-size="large">
+					<div class="cactus__flower"></div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<div class="soil"></div>
