moved flowers to be a data value, not its own div

--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
 			<div class="cactus-pot">
 				<div class="cactus">
 					<div class="cactus__trunk">
-						<!-- Top section; small arm between this one and the section below -->
-						<div class="cactus__trunk-section--crown">
+						<!-- Top section; small arm between this one and the section below; flower on right side -->
+						<div class="cactus__trunk-section cactus__crown">
 							<div
 								class="cactus__arm"
 								data-side="right"
 								data-placement="bottom"
-								data-size="small"
-							>
-								<div class="cactus__flower"></div>
-							</div>
+								data-flower="right"
+							></div>
 						</div>
 
 						<div class="cactus__trunk-section"></div>
 
-						<!-- Bottom section with large arm -->
+						<!-- Bottom section with large arm and flower on top -->
 						<div class="cactus__trunk-section">
 							<div
 								class="cactus__arm"
 								data-side="left"
 								data-placement="center"
-								data-size="large"
+								data-flower="top"
 							>
-								<div class="cactus__flower"></div>
+								<div class="cactus__arm-section cactus__crown"></div>
+								<div class="cactus__arm-section"></div>
+								<div class="cactus__arm-section"></div>
 							</div>
 						</div>
 					</div>
